# chatbot

./: .gitignore  README.md
api-chat/: .env.example  pyproject.toml
api-chat/src/app/: deps.py  main.py
api-chat/src/app/api/v1/routes/: chat.py
api-chat/src/app/core/: config.py  logging.py
api-chat/src/app/schemas/: chat.py
api-chat/src/app/services/: llm.py
web-chat/: package.json
web-chat/src/: App.tsx
web-chat/src/components/: Chat.tsx
web-chat/src/lib/: http.ts
