[project]
name = "api-chat"
version = "0.1.0"
description = "API de chat con FastAPI + OpenAI (best practices)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "openai>=1.40",
  "httpx>=0.27",
  "orjson>=3.10",
  "structlog>=24.1",
  "tenacity>=8.5",
]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","C90"]

[tool.pytest.ini_options]
pythonpath = ["app"]
